Add RecordArr access policy management
